create the animator